RESOLVED FIXED41859
MathML-enabled WebKit build fails
https://bugs.webkit.org/show_bug.cgi?id=41859
Summary MathML-enabled WebKit build fails
red47514f7
Reported 2010-07-08 08:24:36 PDT
WebCore/html/HTMLTreeBuilder.cpp: 1421: error: 'mathMLNamespaceURI' is not a member of 'WebCore::MathMLNames' Actually, "mathml" should be all-downcase.
Attachments
Fix (1.81 KB, patch)
2010-07-09 06:28 PDT, François Sausset
no flags
Beth Dakin
Comment 1 2010-07-08 12:56:58 PDT
Mark fixed this yesterday.
red47514f7
Comment 2 2010-07-08 13:00:40 PDT
Sorry.. Probably I am just bad at picking correct nightlies for MathML support.
Beth Dakin
Comment 3 2010-07-08 13:01:50 PDT
No worries! It's good to file a bug like this!
François Sausset
Comment 4 2010-07-09 06:27:56 PDT
(In reply to comment #1) > Mark fixed this yesterday. The problem persists on trunk r62944. I'm going to attach a patch fixing this typo issue. In addition, an extra parenthesis was present. Such problems could have been avoided if MathML would have been turned on by default.
François Sausset
Comment 5 2010-07-09 06:28:44 PDT
Kenneth Rohde Christiansen
Comment 6 2010-07-10 08:38:11 PDT
Reopen as there is still a patch to be committed
WebKit Commit Bot
Comment 7 2010-07-10 09:02:12 PDT
Comment on attachment 61040 [details] Fix Clearing flags on attachment: 61040 Committed r63046: <http://trac.webkit.org/changeset/63046>
WebKit Commit Bot
Comment 8 2010-07-10 09:02:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.