2010-07-10  François Sausset  <sausset@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        Build fix: syntax and typo issues
        https://bugs.webkit.org/show_bug.cgi?id=41859

        * html/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processStartTagForInBody):
        (WebCore::HTMLTreeBuilder::processStartTag):

git-svn-id: svn://svn.chromium.org/blink/trunk@63046 bbb929c8-8fbe-4397-9dbb-9b2b20218538